<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/title_image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/view2" />

    <TextView
        android:id="@+id/tip"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:marqueeRepeatLimit="marquee_forever"
        android:paddingTop="20dp"
        android:singleLine="true"
        android:textColor="#000000"
        android:textSize="20sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#50000000" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#FFFFFF"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/free"
                android:textColor="#000000"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/rank"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/rank"
                android:textColor="#000000"
                android:textSize="35sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/tip_text2"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/tip_text3"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:text="@string/tip_text4"
                android:textColor="#000000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/acquire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_bg"
                android:padding="15dp"
                android:text="@string/acquire"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>