<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:layout_margin="50dp"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#2198a2"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/share_title_tip"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/dialog_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:src="@drawable/behind_add_city_cancel" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#50000000" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/qq"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/logo_qq"
            android:gravity="center_horizontal"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/qzone"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/logo_qzone"
            android:gravity="center_horizontal"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/wechat"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/logo_wechat"
            android:gravity="center_horizontal"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/wechatmomen"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/logo_wechatmoments"
            android:gravity="center_horizontal"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#2198a2"
        android:orientation="horizontal" >
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/share_text"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/integral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/integral"
            android:textColor="#000000"
            android:textSize="25sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/wall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_bg"
            android:padding="15dp"
            android:text="@string/wall_integral"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>